# pg-web

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HANDOFF.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
bench/: README.md  docker-compose.yml  run.sh  thresholds.sh
bench/app/: pgweb.toml
bench/app/migrations/: 0001_bench_todos.sql
bench/app/pages/: _404.html
bench/app/pages/bench/slow/: index.html  index.sql
bench/app/pages/bench/static/: index.html  index.sql
bench/app/pages/bench/todos/: index.html  index.sql
bench/app/pages/bench/write/: post.sql
crates/pg_web_cli/: Cargo.toml
crates/pg_web_cli/src/: check.rs  db.rs  dev.rs  env.rs  init.rs  lib.rs  main.rs  migrate.rs  paths.rs  push.rs  retry.rs  stack.rs  templates.rs
crates/pg_web_cli/templates/: todo
crates/pg_web_cli/tests/: demo_layout.rs  docker_e2e.rs  init.rs  migrate.rs  push.rs  todo_layout.rs
crates/pg_web_ext/: Cargo.toml  pg_web_ext.control
crates/pg_web_ext/src/: cache.rs  errors.rs  health.rs  http.rs  lib.rs  listen_router.rs  livereload.rs  logging.rs  request_timeout.rs  router.rs  schema.rs  settings.rs  templating.rs  worker.rs
crates/pg_web_ext/tests/: http_smoke.rs
crates/pg_web_ext/tests/pg_regress/sql/: setup.sql
crates/pg_web_ext/upgrades/: README.md  pg_web_ext--0.2.0--0.3.0.sql
docker/: init-pgweb.sh
docs/: APP-DEVELOPER-GUIDE.md  APP-LAYOUT.md  ARCHITECTURE.md  BENCHMARKS.md  CACHING.md  DEPLOYMENT.md  DEVELOPER-GUIDE.md  IDEAS.md  OVERVIEW.md  ROADMAP.md  TESTING.md  THREAT-MODEL.md  TUTORIAL.md  VISION.md
docs/internal/: DEVELOPER-GUIDE.md  HANDOFF.md  README.md  TESTING-SETUP.md
docs/internal/sessions/: session_5.md  session_6.md
docs/sessions/: session_1.md  session_2.md  session_3.md  session_4.md  session_5.md  session_5_validation.md
examples/demo/: README.md  docker-compose.yml  pgweb.toml
examples/demo/pages/: _404.html  index.html  index.sql
examples/demo/pages/todos/: post.html  post.sql
examples/demo/pages/todos/[id]/: index.html
examples/demo/pages/todos/delete/: post.sql
examples/demo/pages/todos/toggle/: post.html  post.sql
examples/demo/public/: styles.css
examples/todo/: .gitignore  Caddyfile  README.md  docker-compose.yml  pgweb.toml
examples/todo/migrations/: 0001_create_todos.sql
examples/todo/pages/: index.html
examples/todo/pages/debug/timeout/: index.sql
examples/todo/pages/health/: index.html  index.sql
examples/todo/pages/seeother/: index.sql
examples/todo/pages/status/: index.sql
examples/todo/pages/todos/: post.html
examples/todo/pages/todos/[id]/: delete.sql  index.sql
examples/todo/pages/todos/toggle/: post.html
prompts/: 001_sqlparser_comment_literals.md  002_dev_livereload_sse_connection_leak.md  003_sql_parser_gin_trgm_opclass_check_failure.md  004_live_dev_db_for_check_validation.md  005_json_api_and_mcp_support.md  006_pgweb_dev_request_access_logging.md  007_tera_render_errors_boolean_leakage_list_handlers.md  009_docs_cleanup_and_public_readiness.md  010_cargo_publish_cli_and_cicd.md  011_update_pgweb_dev_content.md  012_deploy_updates_to_docs_site.md  013_response_contract_v2.md  014_execution_role_hardening_and_threat_model.md  015.2_multiworker_serving_realtime_and_worker_config.md  015_concurrency_throughput_and_benchmark.md  016_request_path_caching_and_graceful_shutdown.md  017_http_capability_floor_methods_uploads_compression.md  018.1_health_and_readiness_endpoints.md  018_extension_upgrades_and_observability.md  019_roadmap_resequencing_backup_and_ecosystem.md  020_site_v2_landing_docs_blog.md  021_ssh_tunneled_remote_push_target.md  022_largeobject_asset_streaming.md  023_phase2_auth_rls_realtime.md  024_dev_watcher_repush_e2e_flakiness.md  025_test_harness_hardening_and_speed.md  026_in_browser_dev_dashboard.md  027_byo_auth_identity_propagation.md  030_benchmark_methodology_connection_churn_real_throughput.md  README.md  pg-web-analysis.html
prompts/completed/: 001_sqlparser_comment_literals.md  002_dev_livereload_sse_connection_leak.md  003_sql_parser_gin_trgm_opclass_check_failure.md  008_docs_site_pgweb_dev_dogfooding.md  009_docs_cleanup_and_public_readiness.md  010_cargo_publish_cli_and_cicd.md  013_response_contract_v2.md  014_execution_role_hardening_and_threat_model.md  015_concurrency_throughput_and_benchmark.md  016_failing_test_handoff.md  018.2_extension_upgrade_path.md  028_test_bench_summary_modes_and_clear_steps.md  029_test_bench_idempotency_and_green_verification.md  030_benchmark_gate_hardening.md  README.md
scripts/: build-image.sh  report-lib.sh  smoke-cli.sh  test-all.sh  test-http.sh
scripts/lib/: harness.sh
site/: 008_docs_site_pgweb_dev_dogfooding.md  Caddyfile  README.md  docker-compose.yml  pgweb.toml
site/pages/: _404.html  index.html  index.sql
site/pages/deployment/: index.html
site/pages/layout/: index.html
site/pages/overview/: index.html
site/pages/roadmap/: index.html
site/pages/tutorial/: index.html
site/public/: styles.css
site/scripts/: bootstrap-hetzner.sh
