[package]
name = "pg_web_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "pg_web_cli"
path = "src/lib.rs"

[[bin]]
name = "pg-web"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"

# push: blocking PG client (no async runtime needed for a one-shot CLI) +
# recursive walk of pages/.
postgres = "0.19"
walkdir = "2"

# stack: parse pgweb.toml for database.url_env / runtime.env / assets.*.
# We only deserialize a few named fields, not the whole file.
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }

# dev: file-watcher-driven re-push loop. notify-debouncer-full handles
# rename-over-write (vim/VS Code) and gives us chokidar-style write-finish
# debouncing. blake3 is the content-hash dedupe layer. ctrlc installs a
# clean-shutdown signal handler.
notify-debouncer-full = "0.3"
blake3 = "1"
ctrlc = { version = "3", features = ["termination"] }

# push: template-parse validation before the DB transaction so a bad
# .html surfaces by path + line, not as an HTTP 500 at runtime. Same
# Tera version as the extension crate to keep parse semantics aligned.
tera = "1"

# push: MIME type detection for static assets synced from public/. Small
# crate with a built-in extension→type map; no runtime magic-byte sniffing
# (which we'd want anyway-blocked for BYTEA-backed text).
mime_guess = "2"

# init: bundle examples/<name>/ directory trees into the CLI binary so
# `pg-web init --template <name>` works without assuming the repo layout
# is present on the target filesystem. Trees are embedded at compile
# time; runtime cost is ~zero, binary size grows by template total.
include_dir = "0.7"

[dev-dependencies]
tempfile = "3"

# Tier 3 Docker E2E test only. Gated with #[ignore] so default `cargo test`
# stays fast; scripts/test-all.sh runs them explicitly.
testcontainers = { version = "0.23", features = ["blocking"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
