[package]
name = "pg-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PostgreSQL as a self-contained web application platform. The CLI for scaffolding, developing, and deploying pg-web apps."
readme = "../../README.md"
homepage = "https://pg-web.dev"
documentation = "https://pg-web.dev"
keywords = ["postgres", "web", "htmx", "tera", "pgrx", "fullstack", "cli"]
categories = ["command-line-utilities", "web-programming", "database"]

# Ensure the `init --template todo` data and the root README (pointed at by
# the `readme` field) are packaged even though they live outside the default
# set of files Cargo includes for a crate.
#
# We use a *symlink* (templates/todo -> ../../../examples/todo) so there is
# only ever one copy of the rich example on disk. The symlink is followed at
# compile time for include_dir! and Cargo follows it when creating the
# published .crate tarball, so `cargo install pg-web` users still get a
# fully working `--template todo`.
include = [
    "src/**/*",
    "templates/**/*",
    "tests/**/*",
    "Cargo.toml",
    "../../README.md",
]

[lib]
name = "pg_web_cli"
path = "src/lib.rs"

[[bin]]
name = "pg-web"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"

# push: blocking PG client (no async runtime needed for a one-shot CLI) +
# recursive walk of pages/.
postgres = "0.19"
walkdir = "2"

# stack: parse pgweb.toml for database.url_env / runtime.env / assets.*.
# We only deserialize a few named fields, not the whole file.
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }

# dev: file-watcher-driven re-push loop. notify-debouncer-full handles
# rename-over-write (vim/VS Code) and gives us chokidar-style write-finish
# debouncing. blake3 is the content-hash dedupe layer. ctrlc installs a
# clean-shutdown signal handler.
notify-debouncer-full = "0.3"
blake3 = "1"
ctrlc = { version = "3", features = ["termination"] }

# push: template-parse validation before the DB transaction so a bad
# .html surfaces by path + line, not as an HTTP 500 at runtime. Same
# Tera version as the extension crate to keep parse semantics aligned.
tera = "1"

# push: MIME type detection for static assets synced from public/. Small
# crate with a built-in extension→type map; no runtime magic-byte sniffing
# (which we'd want anyway-blocked for BYTEA-backed text).
mime_guess = "2"

# init: bundle the todo template (a copy under templates/todo/) into the
# CLI binary so `pg-web init --template todo` works for `cargo install pg-web`
# users with no checkout present. The live reference copy stays at the
# repo root examples/todo/ (used by tests, tutorial, docs, dogfooding site).
include_dir = "0.7"

# check: offline SQL validator. sqlparser is a pure-Rust SQL parser
# with a Postgres dialect — good enough for catching typos,
# unbalanced parens, unclosed strings, malformed DDL. Less authoritative
# than libpg_query (which IS Postgres's own parser) but needs zero
# system build deps, so `cargo install pg-web` and CI both stay
# friction-free. Upgrade path: swap to pg_query if stricter parsing
# becomes necessary (adds gcc + cmake requirements).
sqlparser = "0.52"

# push: capture the hostname of whoever ran `pg-web push` for the
# pgweb.deployments ledger ("who deployed this to staging?"). Tiny
# crate, no deps — just a cross-platform wrapper over gethostname(2)
# / GetComputerNameW. Returns None on failure; column is nullable,
# so we don't care.
gethostname = "0.5"

[dev-dependencies]
tempfile = "3"

# Tier 3 Docker E2E test only. Gated with #[ignore] so default `cargo test`
# stays fast; scripts/test-all.sh runs them explicitly.
testcontainers = { version = "0.23", features = ["blocking"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
