[package]
name = "pg_web_ext"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg17"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []
pg_bench = ["dep:pgrx-bench"]

[dependencies]
pgrx = "=0.18.0"

# HTTP stack: Axum as a thin shell over Hyper, Tower for middleware.
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "macros"] }
tower = { version = "0.5", default-features = false }

# Tracing — quiet by default, structured output. See docs/DEVELOPER-GUIDE.md § logging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }

# Template engine — runtime (not compile-time) rendering because templates
# live in the database and change without recompilation.
tera = { version = "1", default-features = false }
serde_json = "1"
# Form body and query string parsing — HTMX sends application/x-www-form-urlencoded.
serde_urlencoded = "0.7"

[dependencies.pgrx-bench]
version = "=0.18.0"
optional = true

[dev-dependencies]
# HTTP smoke test — hits a running PG+worker, asserts on the response.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[dev-dependencies.pgrx-tests]
version = "=0.18.0"

